# pandem

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: conf.py  index.rst  modules.rst
pandem/: pipeline.py
pandem/io/: __init__.py  liggghts.py  mercury.py  nddem.py  nddem_vtk.py  utils.py  yade.py
samples/: mercury.data  mercury.restart  nddem.csv  nddem.vtk
